# lmdb-rs

./: .gitignore  Cargo.toml  README.md
docs/: index.html  search-index.js
docs/doc/: search-index.js
docs/doc/liblmdb_sys/: MDB_cursor_op.t.html  constant.MDB_APPEND.html  constant.MDB_APPENDDUP.html  constant.MDB_CREATE.html  (+50 more)
docs/liblmdb_sys/: constant.MDB_BAD_TXN.html  constant.MDB_BAD_VALSIZE.html  constant.MDB_CORRUPTED.html  constant.MDB_CURSOR_FULL.html  constant.MDB_DUPFIXED.html  constant.MDB_DUPSORT.html  constant.MDB_FIXEDMAP.html  constant.MDB_INTEGERDUP.html  constant.MDB_KEYEXIST.html  constant.MDB_MAPASYNC.html  constant.MDB_MAP_FULL.html  constant.MDB_MULTIPLE.html  constant.MDB_NODUPDATA.html  constant.MDB_NOLOCK.html  constant.MDB_NOMEMINIT.html  constant.MDB_NORDAHEAD.html  constant.MDB_NOSUBDIR.html  constant.MDB_NOSYNC.html  constant.MDB_PAGE_FULL.html  constant.MDB_PANIC.html  constant.MDB_SUCCESS.html  constant.MDB_TLS_FULL.html  constant.MDB_TXN_FULL.html  constant.MDB_VERSION_MISMATCH.html  enum.MDB_cursor.html  enum.MDB_cursor_op.html  enum.MDB_env.html  enum.MDB_txn.html  fn.mdb_cursor_count.html  fn.mdb_cursor_dbi.html  fn.mdb_cursor_put.html  fn.mdb_cursor_renew.html  fn.mdb_dbi_close.html  fn.mdb_dcmp.html  fn.mdb_del.html  fn.mdb_env_close.html  fn.mdb_env_copy.html  fn.mdb_env_copyfd.html  fn.mdb_env_get_fd.html  fn.mdb_env_get_maxreaders.html  (+17 more)
docs/lmdb_rs/: struct.MDB_envinfo.html  struct.MDB_stat.html  struct.MDB_val.html  type.c_int.html  type.mdb_filehandle_t.html
examples/: simple.rs
src/: core.rs  lib.rs  tests.rs  traits.rs
(+148 files in other folders)
