[package]
name = "lmdb-rs"
version = "0.8.0"
authors = [
	"William Cody Laeder <codylaeder@gmail.com>",
	"Valerii Hiora <valerii.hiora@gmail.com>"
]
license = "MIT/Apache2"
description = "LMDB bindings"
repository = "https://github.com/valarauca/lmdb-rs"
documentation = "https://valarauca.github.io/lmdb-rs/lmdb_rs"
readme = "README.md"
keywords = ["lmdb", "key-value", "kvs", "kv", "memory-mapped"]
exclude = [
        ".gitignore",
        ".travis.yml",
        "up_doc.sh",
]

[dependencies.liblmdb-sys]
path = "liblmdb-sys"
version = "0.2.2"

[dependencies]
log = "0.3"
libc = "0.2"
bitflags = "0.7"
